// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortButtonIcon should display arrow down when sort is descending 1`] = `
<Icon
  color="#60666E"
  name="arrowUp"
  size="16"
/>
`;

exports[`SortButtonIcon should display arrow up when sort is ascending 1`] = `
<Icon
  color="#60666E"
  name="arrowDown"
  size="16"
/>
`;

exports[`SortButtonIcon should display reorder when no sort 1`] = `
<Icon
  color="#60666E"
  name="reorder"
  size="16"
/>
`;
